@startuml

class Usuario {
  + id: UUID
  + nome: String
  + email: String
  + matricula: String
  + tipo: Enum<Professor, Estudante, Admin>
  - senhaHash: String
  + dataCriacao: Date
  + dataAtualizacao: Date
  --
  + autenticar(senha: String): Boolean
  + atualizarPerfil(dados: Object): Usuario
  + listarProjetos(): List<Projeto>
}

class Professor {
  + departamento: String
  + titulacao: String
  --
  + criarProjeto(dados: Object): Projeto
  + atribuirTarefa(tarefa: Tarefa, estudante: Estudante): Boolean
  + revisarEntrega(entrega: Entrega, feedback: String, aprovado: Boolean): Boolean
}

class Estudante {
  + curso: String
  + periodo: String
  --
  + submeterEntrega(tarefa: Tarefa, arquivo: File): Entrega
  + visualizarTarefasPendentes(): List<Tarefa>
  + fazerCheckin(reuniao: Reuniao): Boolean
}

class Projeto {
  + id: UUID
  + titulo: String
  + descricao: String
  + modalidade: String
  + status: Enum<Ativo, Concluido, Arquivado>
  + dataInicio: Date
  + dataFimPrevista: Date
  + dataFimReal: Date
  --
  + adicionarOrientacao(orientacao: Orientacao): Boolean
  + atualizarStatus(novoStatus: String): Boolean
}

class Orientacao {
  + id: UUID
  + dataInicio: Date
  + dataFim: Date
  + status: Enum<Ativa, Concluida, Cancelada>
  --
  + encerrarOrientacao(): Boolean
}

class Tarefa {
  + id: UUID
  + titulo: String
  + descricao: String
  + dataPrazo: Date
  + status: Enum<Pendente, EmAndamento, Concluida, Atrasada>
  + prioridade: Enum<Baixa, Media, Alta>
  --
  + marcarComoConcluida(): Boolean
  + atualizarPrazo(novaData: Date): Boolean
}

class Entrega {
  + id: UUID
  + dataEnvio: Date
  + arquivoUrl: String
  + feedback: String
  + aprovado: Boolean
  --
  + visualizarFeedback(): String
}

class Documento {
  + id: UUID
  + tipo: String
  + conteudo: String
  + dataGeracao: Date
  + urlDownload: String
  --
  + gerarDocumento(template: String, dados: Object): Documento
}

class Notificacao {
  + id: UUID
  + mensagem: String
  + dataEnvio: Date
  + lida: Boolean
  + tipo: Enum<Sistema, Email, Push>
  --
  + marcarComoLida(): Boolean
}

Professor <|-- Usuario
Estudante <|-- Usuario

Professor "1" -- "*" Orientacao : orienta
Estudante "1" -- "*" Orientacao : é orientado
Orientacao "1" -- "1" Projeto : pertence a
Projeto "1" -- "*" Tarefa : contém
Tarefa "*" -- "1" Estudante : atribuída a
Entrega "*" -- "1" Tarefa : referente a
Entrega "*" -- "1" Estudante : submetida por
Usuario "1" -- "*" Notificacao : recebe
Projeto "1" -- "*" Documento : gera

@enduml
